crates/check_cli/tests/snapshots/main_cases_included_files/does_handle_only_included_files.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
snapshot_kind: text
---
## `check.json`

```json
{
  "files": { "includes": ["test.js"] }
}
```

## `test.js`

```js
statement();

```

## `test2.js`

```js
  statement(  )  
```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
