crates/check_cli/tests/snapshots/main_cases_included_files/does_not_handle_included_files_if_overridden_by_ignore_linter.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
snapshot_kind: text
---
## `check.json`

```json
{ "linter": { "includes": ["test.js", "test2.js", "!test.js"] } }
```

## `test.js`

```js
(1 >= -0)
```

## `test2.js`

```js
(1 >= 0)
```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
