crates/check_cli/tests/snapshots/main_cases_included_files/does_not_handle_included_files_if_overridden_by_organize_imports.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
snapshot_kind: text
---
## `check.json`

```json
{
  "formatter": { "enabled": false },
  "linter": { "enabled": false },
  "assist": { "includes": ["test.js", "test2.js", "!test.js"] }
}
```

## `test.js`

```js
import * as something from "../something";
import { lorem, foom, bar } from "foo";
```

## `test2.js`

```js
import { bar, foom, lorem } from "foo";
import * as something from "../something";
```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
